algunos cambios pero solo de nomenclatura, sin avances en la lógica

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="calculator">
         <div class="screen">
             <div>
-                <span id="prev-data"></span><span id="operator"></span>
+                <span id="firstTerm"></span>
+                <span id="operator"></span>
+                <span id="secondTerm"></span>
+                <span id="result"></span>
             </div>
             <span id="current-data"></span>
         </div>
