cambio en los estilos de la calculadora en general

--- a/index.html
+++ b/index.html
@@ -9,42 +9,44 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="screen">
-            <div>
-                <span id="firstTerm"></span>
-                <span id="operator"></span>
-                <span id="secondTerm"></span>
-                <span id="result"></span>
+        <div class="inside-border">
+            <div class="screen">
+                <div>
+                    <span id="firstTerm"></span>
+                    <span id="operator"></span>
+                    <span id="secondTerm"></span>
+                    <span id="result"></span>
+                </div>
+                <span id="current-data"></span>
             </div>
-            <span id="current-data"></span>
-        </div>
-        <div class="keyboard">
-            <div class="first-row">
-                <div id="delete-key">DEL</div>
-                <div id="divide-key" class="operator-btn">/</div>
-            </div>
-            <div class="second-row">
-                <div class="numb-btn">7</div>
-                <div class="numb-btn">8</div>
-                <div class="numb-btn">9</div>
-                <div id="multiply-key" class="operator-btn">*</div>
-            </div>
-            <div class="third-row">
-                <div class="numb-btn">4</div>
-                <div class="numb-btn">5</div>
-                <div class="numb-btn">6</div>
-                <div id="subtract-key" class="operator-btn">-</div>
-            </div>
-            <div class="fourth-row">
-                <div class="numb-btn">1</div>
-                <div class="numb-btn">2</div>
-                <div class="numb-btn">3</div>
-                <div id="add" class="operator-btn">+</div>
-            </div>
-            <div class="fifth-row">
-                <div class="numb-btn">0</div>
-                <div id="point-key" class="numb-btn">.</div>
-                <div id="equal-key">=</div>
+            <div class="keyboard">
+                <div class="first-row">
+                    <div id="delete-key">AC</div>
+                    <div id="divide-key" class="operator-btn">/</div>
+                </div>
+                <div class="second-row">
+                    <div class="numb-btn">7</div>
+                    <div class="numb-btn">8</div>
+                    <div class="numb-btn">9</div>
+                    <div id="multiply-key" class="operator-btn">*</div>
+                </div>
+                <div class="third-row">
+                    <div class="numb-btn">4</div>
+                    <div class="numb-btn">5</div>
+                    <div class="numb-btn">6</div>
+                    <div id="subtract-key" class="operator-btn">-</div>
+                </div>
+                <div class="fourth-row">
+                    <div class="numb-btn">1</div>
+                    <div class="numb-btn">2</div>
+                    <div class="numb-btn">3</div>
+                    <div id="add" class="operator-btn">+</div>
+                </div>
+                <div class="fifth-row">
+                    <div class="numb-btn">0</div>
+                    <div id="point-key" class="numb-btn">.</div>
+                    <div id="equal-key">=</div>
+                </div>
             </div>
         </div>
     </div>
