add the github link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             </div>
         </div>
     </div>
+    <div class="logo-container">
+        <a href="https://github.com/Leogutierrez24/calculator" class="toGithub-link" target="_blank" rel="noopener noreferrer">
+            <img src="./images/github.svg" class="github-logo" alt="github logo" />
+        </a>
+    </div>
     <script src="./js/dom.js"></script>
     <script src="./js/class/Calculator.js"></script>
     <script src="./js/index.js"></script>
